@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Murex
-version:      0.035
+version:      0.040
 version_from: lib/Murex.pm
 installdirs:  site
 requires:
