@@ -25,7 +25,7 @@ AUTHOR
        Markus Linke, markus.linke@linke.de
 
 COPYRIGHT AND LICENSE
-       Copyright 2005-2006 by Markus Linke. All rights reserved.
+       Copyright 2005, 2006 by Markus Linke. All rights reserved.
        NO commercial use without authors written permission!
 
 AMENDMENT HISTORY
