@@ -72,7 +72,7 @@ is Murex::Base, Murex.pm itself is not available yet.</p>
 <hr />
 <h1><a name="copyright_and_license">COPYRIGHT AND LICENSE</a></h1>
 <pre>
-   Copyright 2005-2006 by Markus Linke. All rights reserved.
+   Copyright 2005, 2006 by Markus Linke. All rights reserved.
    NO commercial use without authors written permission!</pre>
 <p>
 </p>
